Fix auto save and save for game 2048, change the shallow copy in constructor of game2048 to hard copty in order to prevent the bugs that causes by references while the board still changes when not saving the game. \n :)